terraform/network.tf
# resource "azurerm_virtual_network" "vnet" {
#   name                = var.vnet_name
#   address_space       = var.vnet_address_space
#   location            = azurerm_resource_group.rg.location
#   resource_group_name = azurerm_resource_group.rg.name
#   tags                = local.common_tags
# }

# resource "azurerm_subnet" "web" {
#   name                 = var.subnet_name_web
#   resource_group_name  = azurerm_resource_group.rg.name
#   virtual_network_name = azurerm_virtual_network.vnet.name
#   address_prefixes     = var.subnet_address_prefix
# }


data "azurerm_virtual_network" "existing" {
  name                = var.existing_vnet_name
  resource_group_name = var.network_resource_group_name
}

data "azurerm_subnet" "existing" {
  name                 = var.existing_subnet_name
  virtual_network_name = data.azurerm_virtual_network.existing.name
  resource_group_name  = var.network_resource_group_name
}
